assets/frontend/wbtm.css
.overflow-x-auto{
    overflow-x: auto;
}

  /* ============layout=== */
.d-flex{
  display: flex;
}

.flex-row{
  flex-direction: row;
}

.flex-column{
  flex-direction: column;
}
.justify-content-start{
  justify-content: start;
}
.justify-content-center{
  justify-content: center;
}
.justify-content-end{
  justify-content: end;
}
.justify-content-around{
  justify-content: space-around;
}

.justify-content-between{
  justify-content: space-between;
}

.justify-content-evenly{
  justify-content: space-evenly;
}

.align-items-start{
  align-items: start;
}

.align-items-center{
  align-items: center;
}

.align-items-end{
  align-items: end;
}

.align-items-stretch{
  align-items: stretch;
}
/*  ======text alignment======= */
.text-start{
text-align: left;
}
.text-center{
text-align: center;
}
.text-end{
text-align: right;
}
/* ============= */

.wbtm-bust-list{
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  padding: 1em;
  background-color: #F5F5F5;
  text-align: center;
  border-radius: var(--dBR);
  border: 1px solid var(--color_theme);
  margin-top:.8em;
}
.mpStyle [class*="_infoLayout_xs"]{
  margin-bottom: 0;
}
.wbtm-bus-image{
  width: 100%;
}
.wbtm-bus-name{
  width:100%;
  color: #797979;
  margin: .5rem 0;
}
.wbtm-bus-route{
  width:100%;
  margin: .5rem 0;
}
.wbtm-bus-route h6{
  margin: .3em 0 !important; 
}
.wbtm-seat-info{
  width:100%;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  color: #797979;
  margin: .5rem 0;
  border:1px solid  #b8b8b8;
  padding: .5em 0;
}
.wbtm-seat-book{
  width:100%;
  margin: 1rem 0;
}
.wbtm-seat-book [class*="Button_xs"]{
  width: 100%;
}
@media (min-width:768px){
  .wbtm-bust-list{
    flex-direction: row;
  }
  .wbtm-bus-image{
    width: 10%;
  }
  .wbtm-bus-name{
    width:15%;
    margin:0;
  }

  .wbtm-bus-route{
    width:20%;
    margin:0;
  }
  .wbtm-seat-info{
    width:35%;
    margin:0;
    justify-content: space-between;
    border:0px solid  #797979;
    padding:0;
  }
  .wbtm-seat-book{
    width:10%;
    margin:0;
  }
}

